--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.6",
     "tailwindcss": "^4.1.17",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
