--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,13 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+  "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "http://52.78.170.78:8080/api/:path*"
+    },
+    {
+      "source": "/auth/:path*",
+      "destination": "http://52.78.170.78:8080/auth/:path*"
+    },
+    { "source": "/(.*)", "destination": "/index.html" }
+  ]
 }
